Bug 594640 - TM: avoid redundant snapshots when recording GETELEM.  r=gal.