js/src/jstracer.h
@@ -1196,7 +1196,8 @@ class TraceRecorder
                                                Value* outp);
     JS_REQUIRES_STACK RecordingStatus denseArrayElement(Value& oval, Value& idx, Value*& vp,
                                                         nanojit::LIns*& v_ins,
-                                                        nanojit::LIns*& addr_ins);
+                                                        nanojit::LIns*& addr_ins,
+                                                        VMSideExit* exit);
     JS_REQUIRES_STACK nanojit::LIns *canonicalizeNaNs(nanojit::LIns *dval_ins);
     JS_REQUIRES_STACK AbortableRecordingStatus typedArrayElement(Value& oval, Value& idx, Value*& vp,
                                                                  nanojit::LIns*& v_ins,
